examples/test/testpolicy9621.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9621
  namespace: namespace496
spec:
  podSelector:
    matchLabels:
      key3: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value14
          key12: value32
          key18: value28
      podSelector:
        matchLabels:
          key12: value20
          key40: value36
          key8: value28
